--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,10 @@ build:
   rpaths:
     - lib/R/lib/
     - lib/
+  missing_dso_whitelist:
+    - '*/R.dll'        # [win]
+    - '*/Rblas.dll'    # [win]
+    - '*/Rlapack.dll'  # [win]
 
 requirements:
   build:
@@ -25,17 +29,23 @@ requirements:
   host:
     - r-base
     - r-digest >=0.1
-    - r-dplyr >=0.7
+    - r-dplyr >=1.0
+    - r-geojsonsf
     - r-httr >=1.0.0
     - r-jsonlite >=1.0
+    - r-readr
     - r-rlang
+    - r-sf
   run:
     - r-base
     - r-digest >=0.1
-    - r-dplyr >=0.7
+    - r-dplyr >=1.0
+    - r-geojsonsf
     - r-httr >=1.0.0
     - r-jsonlite >=1.0
+    - r-readr
     - r-rlang
+    - r-sf
 
 test:
   commands:
